hotfix: fix popup visibility

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -12,5 +12,5 @@
   align-items: center;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.6s, opacity 0.5s linear;
+  transition: visibility 0.5s, opacity 0.5s linear;
 }
